# taillog_labeling

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION-NOTES.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py  urls.txt
.claude/automations/: HANDOFF-TEMPLATE.md  HANDOFF.md  README.md  daily-critic-review.md  daily-pipeline.md  daily-quality-gate.md  daily-sync-monitor.md  nightly-vision-labeling.md  weekly-autoresearch-loop.md  weekly-dataset-health.md  weekly-model-eval.md  weekly-pipeline-audit.md
docs/architecture/: sqlite-schema.md
docs/ref/: AGENT-OPERATING-MODEL.md  CONFIDENCE-THRESHOLD-POLICY.md  FAILURE-HANDLING.md  INDEX.md  LABEL-SCHEMA.md  MODEL-ROADMAP.md  MODEL-ROLE-MAP.md  OPEN-DECISIONS.md  PHASE-PLAN.md  PIPELINE-OPERATING-MODEL.md  QA-METRICS.md  SUPABASE-SYNC-CONTRACT.md  TECH-STACK-DECISIONS.md  YOUTUBE-SOURCE-POLICY.md
docs/status/: DECISION-LOG.md  EXTERNAL-DATASETS.md  PIPELINE-DIAGRAM.md  PRE-DEV-CHECKLIST.md  SELF-CRITIQUE-LOG.md
scripts/: classify_frames.py
scripts/compare/: download.py  requirements_compare.txt  run_all.sh  run_superanimal.py  run_yolo.py  search_videos.py  visualize.py
scripts/review/: review_app.py
scripts/setup/: backfill_pose_results.py  bootstrap.sh  deeplabcut-venv.sh  download_external_datasets.py  test-ollama.sh
src/: __init__.py
src/agents/: __init__.py  abc_labeler.py  behavior_classifier.py  collector.py  critic.py  pose_extractor.py  quality_gate.py  (+2 more)
tests/: conftest.py  test_agents.py  test_database.py  test_models.py  test_prompts.py
(+17 files in other folders)
